替换log库